--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-loader": "^9.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
